--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body{
+  background: white;
+  width: 100%;
+  max-width:1000px;
+  position: relative;
+  font-family: 'Roboto';
+  margin: auto;
+  text-align: center;
+}
 h1, h2, h4{
   font-family:'Roboto', sans-serif;
   color: #064e7d;
@@ -5,7 +14,7 @@ h1, h2, h4{
 }
 .warning{
   font-family: 'Roboto',sans-serif;
-  color: black;
+  color: red;
   align-content: center;
   font-size: 0.6em;
 }
@@ -37,22 +46,24 @@ p{
     margin-top: 0;
   }
 }
+/* Style the container */
+.contenedorFrom {
+  background-color: white;
+  text-align: center;
+  justify-content: space-between;
+  border: 2px solid white;
+  max-width: 95%;
+  margin: auto;
+}
+/*
 .contenedorGlobal{
   width: 100%;
   max-width: 500px;
   background: white;
   position: relative;
   margin: auto; /*Ubica el contenedor en el centro de la página*/
-  display: block;
-}
-.contenedorFrom {
-  border-radius: 5px;
-  background-color: white;
-  text-align: center;
-  justify-content: space-between;
-  border: 2px solid white;
-  max-width: 95%;
-}
+  /*display: flex;
+}*/
 /*
 .contenedorHeader{
   background: white;
@@ -66,8 +77,8 @@ p{
 }
 */
 .contenedorHeader{
+  font-family: 'Roboto',sans-serif;
   background: white;
-  border-radius: 5px;
   align-content: center;
   justify-content: space-between;
   display: flex;
@@ -75,8 +86,8 @@ p{
   border-bottom-color: #FF9900;
   height: 50px;
   width: 100%;
+  max-width: 997px;
   position: fixed;
-  left: 0;
   top: 0;
 }
 .items{
@@ -89,10 +100,19 @@ p{
   font-size: 0.8em;
   font-family: sans-serif;
   font-weight: bold;
+
 }
 .contenedorMain{
-  padding-top: 50px;
-  margin-bottom: 60px;
+    font-family: 'Roboto',sans-serif;
+    background: white;
+    align-content: center;
+    justify-content: center;
+    display: block;
+    width: 100%;
+    max-width:1000px;
+    padding-top: 55px;
+    padding-bottom: 50px;
+    margin: auto;
 }
 .label_main{
   font-family:'Roboto', sans-serif;
@@ -189,7 +209,6 @@ p{
 }*/
 .contenedorFooter{
   background: white;
-  border-radius: 5px;
   align-content: center;
   justify-content: space-between;
   display: flex;
@@ -197,24 +216,37 @@ p{
   height: 50px;
   width: 100%;
   margin-top: 40px;
+  max-width: 997px;
   position: fixed;
-  left: 0;
   bottom: 0;
-  border: 2px solid white;
+  border: 2px solid #064e7d;
   border-top-color: #FF9900;
 }
 .textoPrueba{
   text-align: justify;
 }
+.contenedorFrom {
+  padding-top: 30px;
+  margin: auto;
+  padding-bottom: 60px;
+  max-width: 450px;
+  width: 80%;
+}
+#icon-eye {
+  position: absolute;
+  /* left: 0px; */
+  right: -3px;
+  top: 0px;
+  padding: 9px 8px;
+  color: #064e7d;
+  float: right;
+  transform:rotate (180deg);
+}
 /*
 * CSS FORM
 */
-.contenedorFrom {
-  padding-top: 20px;
-  max-width: 400px;
-  width: 95%;
-  margin: auto;
-}
+/*
+
 .formulario_input, .formulario_label, .formulario_inputConf {
   display: block;
   width: 95%;
@@ -232,27 +264,26 @@ p{
   color: rgba(0, 0, 0, 0.5);
   transition: all 0.1s;
   /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-  max-width: 400px;
+ /* max-width: 400px;
   width: 95%;
 }
 .formulario_input {
   padding: 5px;
   /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-  margin-bottom: 40px;
+ /* margin-bottom: 40px;
  /* background: rgba(0, 0, 0, 0.1);*/
-  background: transparent;
+ /* background: transparent;
   border: 1.95px solid white;
   border-bottom-color: black;
   max-width: 400px;
   width: 95%;
-  background-image:(images/eye-solid.svg);
 }
 .formulario_inputConf{
   margin-top: -25px;
   /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-  margin-bottom: 40px;
+ /* margin-bottom: 40px;
  /* background: rgba(0, 0, 0, 0.1);*/
-  background: transparent;
+ /* background: transparent;
   border: 1.95px solid white;
   border-bottom-color: black;
   max-width: 400px;
@@ -260,13 +291,12 @@ p{
 }
 .formulario_input:focus {
   /*outline: 1px solid rgba(0, 0, 0, 0.);*/
-  outline-color: transparent;
+ /* outline-color: transparent;
   border-bottom-color: #006194;
 }
 .formulario_input:focus::-webkit-input-placeholder{
   color: red;
 }
-
 .formulario_input[placeholder]:focus, .formulario_inputConf[placeholder]:focus{
   color:grey;
   font-size: 0.8em;
@@ -281,6 +311,225 @@ p{
 .fijar {
   margin-top: -95px;
 }
-/*
-* CSS MODAL
 */
+/*
+=====
+=====
+=====
+*/
+/*
+=====
+LEVEL 1. RESET STYLES
+=====
+*/
+
+.field{
+  --uiFieldPlaceholderColor: var(--fieldPlaceholderColor, #767676);
+}
+
+.field__input{
+  background-color: transparent;
+  border-radius: 0;
+  border: none;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  font-family: inherit;
+  font-size: 0.8em;
+}
+
+.a-field .field__input:focus{
+  outline: none;
+}
+
+.field__input:focus::-webkit-input-placeholder{
+  color: var(--uiFieldPlaceholderColor);
+}
+
+.field__input:focus::-moz-placeholder{
+  color: var(--uiFieldPlaceholderColor);
+  opacity: 1;
+}
+
+/*
+=====
+LEVEL 2. CORE STYLES
+=====
+*/
+
+.field{
+  display: inherit;
+}
+
+.field__input{
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+/*
+=====
+LEVEL 3. PRESENTATION STYLES
+=====
+*/
+
+/* a-field */
+
+.a-field{
+  --uiFieldHeight: var(--fieldHeight, 25px);
+  --uiFieldBorderWidth: var(--fieldBorderWidth, 2px);
+  --uiFieldBorderColor: var(--fieldBorderColor);
+
+  --uiFieldFontSize: var(--fieldFontSize, .9em);
+  --uiFieldHintFontSize: var(--fieldHintFontSize, .9em);
+
+  font-family: sans-serif;
+  font-weight: bold;
+  color: gray;
+
+  --uiFieldPaddingRight: var(--fieldPaddingRight, 15px);
+  --uiFieldPaddingBottom: var(--fieldPaddingBottom, 15px);
+
+  position: relative;
+  box-sizing: border-box;
+  /*font-size: var(--uiFieldFontSize);*/
+  padding-top: 1em;
+}
+
+.a-field .field__input{
+  height: var(--uiFieldHeight);
+  padding: 0 var(--uiFieldPaddingRight) 0 var(--uiFieldPaddingLeft);
+  border-bottom: var(--uiFieldBorderWidth) solid var(--uiFieldBorderColor);
+}
+
+.a-field .field__input::-webkit-input-placeholder{
+  opacity: 0;
+  transition: opacity .2s ease-out;
+}
+
+.a-field .field__input::-moz-placeholder{
+  opacity: 0;
+  transition: opacity .2s ease-out;
+}
+
+.a-field .field__input:not(:placeholder-shown) ~ .field__label-wrap .field__label{
+  opacity: 0;
+  bottom: var(--uiFieldPaddingBottom);
+}
+
+.a-field .field__input:focus::-webkit-input-placeholder{
+  opacity: 1;
+  transition-delay: .2s;
+}
+
+.a-field .field__input:focus::-moz-placeholder{
+  opacity: 1;
+  transition-delay: .2s;
+}
+
+.a-field .field__label-wrap{
+  box-sizing: border-box;
+  width: 100%;
+  height: var(--uiFieldHeight);	
+  text-align: center;
+
+  pointer-events: none;
+  cursor: text;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.a-field .field__label{
+  position: relative;
+  bottom: calc(50% - 1em);
+
+  line-height: 1;
+  font-size: var(--uiFieldHintFontSize);
+
+  pointer-events: none;
+  transition: bottom .2s cubic-bezier(0.9,-0.15, 0.1, 1.15), opacity .2s ease-out;
+  will-change: bottom, opacity;
+}
+
+.a-field .field__input:focus ~ .field__label-wrap .field__label{
+  opacity: 1;
+  bottom: var(--uiFieldHeight);
+}
+
+/* a-field_a1 */
+
+.a-field_a1 .field__input{
+  transition: border-color .2s ease-out;
+  will-change: border-color;
+}
+
+.a-field_a1 .field__input:focus{
+  border-color: var(--fieldBorderColorActive);
+}
+
+/* a-field_a2 */
+
+.a-field_a2 .field__label-wrap:after{
+  content: "";
+  box-sizing: border-box;
+  width: 0;
+  height: var(--uiFieldBorderWidth);
+  background-color: var(--fieldBorderColorActive);
+
+  position: absolute;
+  bottom: 0;
+  left: 0;  
+
+  will-change: width;
+  transition: width .285s ease-out;
+}
+
+.a-field_a2 .field__input:focus ~ .field__label-wrap:after{
+  width: 100%;
+}
+
+/* a-field_a3 */
+
+.a-field_a3{
+  padding-top: 1.5em;
+}
+
+.a-field_a3 .field__label-wrap:after{
+  content: "";
+  box-sizing: border-box;
+  width: 100%;
+  height: 0;
+
+  opacity: 0;
+  border: var(--uiFieldBorderWidth) solid var(--fieldBorderColorActive);
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  will-change: opacity, height;
+  transition: height .2s ease-out, opacity .2s ease-out;
+}
+
+.a-field_a3 .field__input:focus ~ .field__label-wrap:after{
+  height: 100%;
+  opacity: 1;
+}
+
+.a-field_a3 .field__input:focus ~ .field__label-wrap .field__label{
+  bottom: calc(var(--uiFieldHeight) + .5em);
+}
+
+/*
+=====
+LEVEL 4. SETTINGS
+=====
+*/
+
+.field{
+  --fieldBorderColor: #e3e4e5;
+  --fieldBorderColorActive: #09598d;
+}
+
